syntax = "proto3";

package order;

option go_package = "github.com/sorroche-m/desafio-clean-architecture/pkg/proto";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
    rpc GetOrder(GetOrderRequest) returns (OrderResponse);
}

message CreateOrderRequest {
    string customer_id = 1;
    double amount = 2;
}

message ListOrdersRequest {}

message GetOrderRequest {
    string id = 1;
}

message OrderResponse {
    string id = 1;
    string customer_id = 2;
    double amount = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
}

message ListOrdersResponse {
    repeated OrderResponse orders = 1;
}